src/Tests/Error/NaNError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class NaNError extends AssertError
{
}
